--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
+#root {
+  height: 100%;
+  background-image: url("https://raw.githubusercontent.com/telegramdesktop/tdesktop/dev/Telegram/Resources/art/bg_initial.jpg");
+  background-position-y: -54px;
+  background-attachment: fixed;
+}
+
 .chat__body {
   font-family: sans;
   font-size: 26px;
@@ -15,9 +23,7 @@ html, body {
   display: flex;
   width: 100%;
   height: 100%;
-  //background-image: url("https://raw.githubusercontent.com/telegramdesktop/tdesktop/dev/Telegram/Resources/art/bg_initial.jpg");
-  //background-position-y: -54px;
-  //background-attachment: fixed;
+	padding-top: 1em;
 }
 
 .sticker {
