--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background-image: url("https://raw.githubusercontent.com/telegramdesktop/tdesktop/dev/Telegram/Resources/art/bg_initial.jpg");
+  background-image: url('./background.jpg');
   background-position-y: -54px;
   background-attachment: fixed;
 }
@@ -16,7 +16,7 @@ html, body {
 .chat__body {
   font-family: sans-serif;
   font-size: 26px;
-  line-height: initial;
+  line-height: normal;
   color: initial;
   display: flex;
   width: 100%;
@@ -27,12 +27,13 @@ html, body {
 .sticker {
 	width: 512px;
 	position: relative;
-  	margin: 10px;
+  	padding: 8px;
+	padding-bottom: 0px;
 }
 
 .chathead {
 	position: absolute;
-	bottom: 0px;
+	bottom: 6px;
 	width: 64px;
 	height: 64px;
 	//float: left;
@@ -46,7 +47,7 @@ html, body {
   flex-grow: 1;
   justify-content: flex-end;
   padding-left: 90px;
-  padding-right: 10px;
+  //padding-right: 10px;
 }
 
 .message {
@@ -57,6 +58,7 @@ html, body {
   position: relative;
   
   min-height: 60px;
+  min-width: 250px;
   max-width: 840px;
   
   background-color: #FFF;
@@ -101,6 +103,7 @@ html, body {
 }
 
 .message__text {
+  width: 100%;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
